[wip] popover z-index issue

--- a/app/components/trainee/scheduleTraining/index.css
+++ b/app/components/trainee/scheduleTraining/index.css
@@ -154,8 +154,9 @@
   width: 91vw !important;
 }
 .table-responsive-width {
-  width: 53vw !important;
+  width: 52vw !important;
   margin-top: 15px;
+  z-index: auto !important;
   margin-left: 12px;
 }
 
